Add third thrower speed input

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
     <button id="send-thrower-speed2">Send</button>
 </div>
 <div class="control">
+    <label class="text-input-label">Thrower speed 3</label>
+    <input id="thrower-speed3" type="text">
+    <button id="send-thrower-speed3">Send</button>
+</div>
+<div class="control">
     <label>Failsafe</label>
     <input id="failsafe" type="checkbox" checked>
 </div>
